    it doesn't exist. The current log file is always called
    "current". Historical log files are called the rfc3339 timestamp
    when they ended. Again sorry for the breakage.

* 0.17.4

  - ignore pings in netidx-wsproxy

  - add serialize/deserialize to netidx-netproto::value::Typ 

* 0.17.3

  - add a pack implementation for HashSet
  
  - don't put empty objects back in pools

* 0.17.2

  - change the websocket proxy protocol a bit to make it possible to
    have multiple in flight rpcs.

  - Allow rpcs to complete out of order, and don't wait for them to
    move on
  
  - Fix trait requirements for Packing HashMap
  
  - implement a new toplevel Pack directive #[pack(unwrapped)]
    which prevents length wrapping the type it is applied to.
    Also the Pack macro now validates attributes.
    
  - websocket-proxy; expose the warp filter that runs the proxy so
    it can be combined into a bigger warp api if desired.

  - change netidx-archive to use the better maintained memmap2 crate
    instead of mapr

* 0.17.1

  - permissions now allow dynamic params. e.g.  { "/foo/bar/$[user]":
    { "$[user]": swlpd } } would give user 'eric' swlpd in
    /foo/bar/eric. { "/foo/bar/$[group]": { "$[group]-admin": swlpd,
    "$[group]": sl } } would give members of group 'users' sl in
    /foo/bar/users, and members of group 'users-admin' swlpd in
    /foo/bar/users.

  - add a new tool and library, netidx-wsproxy, a websocket proxy to
    publisher, subscriber and rpcs. Including an example javascript
    interface.

* 0.17.0
  
  - netidx_derive::Pack implement #[pack(other)] attribute for
    enums. Does the same thing as #[serde(other)], if the enum tag
    isn't know will decode as the enum #[pack(other)] is placed on.

  - fully propagate user and group info from the resolver through to
    the publisher. Now for all authentication mechanisms, the
    publisher will be able to return a UserInfo struct that contains